fix-9127: Top align table content on manage event dashboard

--- a/app/styles/pages/events.scss
+++ b/app/styles/pages/events.scss
@@ -256,3 +256,11 @@
     min-width: 7rem;
   }
 }
+
+.table-event-live {
+  table {
+    td {
+      vertical-align: top !important;
+    }
+  }
+}
